--- a/README.org
+++ b/README.org
@@ -1,1 +1,25 @@
-* 秋招冲鸭
+* Emacs工具篇
+** 常用快捷键(ctrl-c; alt-m)
+   | 功能               | 快捷键         |
+   | 新建文件or打开文件 | c-x c-f        |
+   | eshell             | m-x eshell     |
+   | 添加有名称的超链接 | [[url] [name]] |
+   |                    |                |
+* LeetCode刷题篇
+** 每日题目分配
+   | date  | 李云良 | 徐叶琛 | 勒一凡 |
+   |-------+--------+--------+--------|
+   | 05/14 |        |        |        |
+   |       |        |        |        |
+   |       |        |        |        |
+   |       |        |        |        |
+   |       |        |        |        |
+   |       |        |        |        |
+** 解题思路
+*** example
+**** 题目名字/url/date
+     + 题目描述
+     + 解题思路
+     + code_dir：py文件地址
+*** 正式样本
+* MachineLearning分享篇
