--- a/README.org
+++ b/README.org
@@ -40,11 +40,11 @@
       + 例如：dp[3][2][1] 的含义就是：今天是第三天，我现在手上持有股票，至今最多进行 2 次交易
       + 状态转移:
       + (1)今天我没有持有股票，有两种可能：
-	+ 我昨天就“没有持有”，然后今天“不操作”，所以我今天还是“没有持有”；
-	+ 我昨天“持有”股票，但是今天我“卖出”了，所以我今天“没有持有”股票了
+	- 我昨天就“没有持有”，然后今天“不操作”，所以我今天还是“没有持有”；
+	- 我昨天“持有”股票，但是今天我“卖出”了，所以我今天“没有持有”股票了
       + (2)今天我持有着股票，有两种可能：
-	+ 我昨天就“持有”股票，然后今天选择“不操作”，所以我今天还“持有”股票；
-	+ 我昨天本“没有持有”，但今天我选择“买入”，所以今天我就“持有”股票了
+	- 我昨天就“持有”股票，然后今天选择“不操作”，所以我今天还“持有”股票；
+	- 我昨天本“没有持有”，但今天我选择“买入”，所以今天我就“持有”股票了
       + coding: [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]
       + 推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
 * MachineLearning分享篇
