--- a/README.org
+++ b/README.org
@@ -18,11 +18,11 @@
    5. c-c a进入agenda buffer,选择a查看当前用户日程
 * LeetCode刷题篇
 ** 每日题目分配
-   | Date  | 李云良       | 徐叶琛                   | 勒一凡         | Check |
-   |-------+--------------+--------------------------+----------------+-------|
-   | 05/14 | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]     | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]     |       |
-   | 05/15 | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]] | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]] |       |
-   |       |              |                          |                |       |
+   | Date  | 李云良       | 徐叶琛                   | 勒一凡          | Check |
+   |-------+--------------+--------------------------+-----------------+-------|
+   | 05/14 | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]     | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]    ☑️  | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]    ☑️ |       |
+   | 05/15 | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]] | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]]  |       |
+   |       |              |                          |                 |       |
 ** 解题思路
 *** 题目列表
 **** [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][121. 买卖股票的最佳时机]]
@@ -47,6 +47,24 @@
 	- 我昨天本“没有持有”，但今天我选择“买入”，所以今天我就“持有”股票了
       + coding: [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]
       + 推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
+**** [[https://leetcode-cn.com/problems/maximum-subarray/][53. 最大子序和]]
+***** 题目描述
+      + 给定一个整数数组 nums，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+***** 示例:
+      + 输入: [-2,1,-3,4,-1,2,1,-5,4],
+      + 输出: 6
+      + 解释: 连续子数组 [4,-1,2,1] 的和最大，为 6。
+***** 解题思路
+      + 总体思路：计算“到”每个位置时的连续和的最大值，最后取所有位置的最大值，即为结果
+      + 符号表示：
+        - max_num_list(type:list)表示“到”该位置的连续和的最大值
+        - inum表示当前位置的num的数值
+      + 转移方程：max_num_list[i]=max(max_num_list[i-1]+inum,inum)
+      + coding:[[/coding/53_最大子序和.py][53.最大子序和]]
+
+
+
+
 * MachineLearning分享篇
 ** 学习计划
    | 专题 | deaaline     |
