--- a/README.org
+++ b/README.org
@@ -16,21 +16,22 @@
    3. shift + 上下按键调节任务优先级
    4. c-c c-c保存，c-c c-k退出不保存
    5. c-c a进入agenda buffer,选择a查看当前用户日程
-* LeetCode刷题篇
+* ⛽️LeetCode刷题篇
 #+DOWNLOADED: file:/var/folders/73/53s3wczx1l32608prn_fdgrm0000gn/T/TemporaryItems/（screencaptureui正在存储文稿，已完成6）/截屏2020-05-14 下午8.50.18.png @ 2020-05-14 20:50:24
 [[file:Screen-Pictures/LeetCode%E5%88%B7%E9%A2%98%E7%AF%87/2020-05-14_20-50-24_%E6%88%AA%E5%B1%8F2020-05-14%20%E4%B8%8B%E5%8D%888.50.18.png]]
-** 每日题目分配
+** 🐈每日题目分配
    | Date  | 李云良       | 徐叶琛                   | 勒一凡         | Check |
    |-------+--------------+--------------------------+----------------+-------|
    | 05/14 | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]     | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]     |       |
    | 05/15 | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]] | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]] |       |
    |       |              |                          |                |       |
-** 解题思路
+** 🧠解题思路
 *** 题目列表
     + [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]🍉
     + [[file:./coding/198_打家劫舍.py][198.打家劫舍]] / 推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
     + [[/coding/53_最大子序和.py][53.最大子序和]]
-* MachineLearning分享篇
+    + [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
+* 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题 | deaaline     |
    | SVM  | 05/16~ 05/17 |
