--- a/README.org
+++ b/README.org
@@ -24,13 +24,14 @@
    |-------+--------------+--------------------------+----------------+-------|
    | 05/14 | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]     | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]     |       |
    | 05/15 | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]] | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]] |       |
-   |       |              |                          |                |       |
+   | 05/16 | [[https://leetcode-cn.com/problems/minimum-path-sum/][最小路径和]]   | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][最长回文子串]]   |       |
 ** 🧠解题思路
 *** 题目列表
-    + [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]🍉
-    + [[file:./coding/198_打家劫舍.py][198.打家劫舍]] / 推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
-    + [[/coding/53_最大子序和.py][53.最大子序和]]
-    + [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
+    * [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]🍉推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
+    * [[file:./coding/198_打家劫舍.py][198.打家劫舍]]
+    * [[/coding/53_最大子序和.py][53.最大子序和]]
+    * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
+    * [[file:./coding/最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题 | deaaline     |
