--- a/README.org
+++ b/README.org
@@ -31,7 +31,7 @@
     * [[file:./coding/198_打家劫舍.py][198.打家劫舍]]
     * [[/coding/53_最大子序和.py][53.最大子序和]]
     * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
-    * [[file:./coding/最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
+    * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题 | deaaline     |
