--- a/README.org
+++ b/README.org
@@ -32,6 +32,7 @@
     * [[/coding/53_最大子序和.py][53.最大子序和]]
     * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
     * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
+    * [[../QiuZhao-ChongChongChong/coding/300_最长上升子序列.py][300.最长上升子序列]]😣
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题 | deaaline     |
