--- a/README.org
+++ b/README.org
@@ -41,6 +41,7 @@
     * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
     * [[file:./coding/300_最长上升子序列.py][300.最长上升子序列]]😣
     * 💰[[file:/coding/123_买卖股票的最佳时机III.py][123.买票股票的最佳时机III]]
+    * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️ 
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题 | deaaline      |
