--- a/README.org
+++ b/README.org
@@ -41,11 +41,12 @@
     * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
     * [[file:./coding/300_最长上升子序列.py][300.最长上升子序列]]😣
     * 💰[[file:/coding/123_买卖股票的最佳时机III.py][123.买票股票的最佳时机III]]
-    * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️ 
+    * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️
+    * 🥤[[file:./coding/139_单词拆分.py][139.单词拆分]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题 | deaaline      |
-   | SVM  | 05/14 ~ 05/17 |
+   | SVM  | 05/14 ~ 05/19 |
    | Todo |               |
 ** 分享链接（专题笔记文件地址）
 *** SVM
