--- a/README.org
+++ b/README.org
@@ -43,13 +43,21 @@
     * 💰[[file:/coding/123_买卖股票的最佳时机III.py][123.买票股票的最佳时机III]]
     * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️
     * 🥤[[file:./coding/139_单词拆分.py][139.单词拆分]]
+    * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
 * 📣MachineLearning分享篇
 ** ✈️学习计划
-   | 专题 | deaaline      |
-   | SVM  | 05/14 ~ 05/19 |
+   | 专题  | deadline     |
+   | SVM   | 05/14 ~ 05/19 |
    | Todo |               |
 ** 分享链接（专题笔记文件地址）
 *** SVM
     + 李云良：
     + 徐叶琛：
-    + 勒一凡：
+    + 勒一凡
+   | 决策树| 05/20 ~ 05/26|
+   |xgboost| 05~27 ~ 06/02 |
+*   TODO list
+   |数学基础| 6月 待安排 |
+   |笔试题|6月 待安排|
+   |python高级编程|待安排|
+   |ML比赛|待安排|
