--- a/README.org
+++ b/README.org
@@ -48,16 +48,16 @@
 ** ✈️学习计划
    | 专题  | deadline     |
    | SVM   | 05/14 ~ 05/19 |
-   | Todo |               |
+   | 决策树| 05/20 ~ 05/26|
+   |xgboost| 05~27 ~ 06/02 |
 ** 分享链接（专题笔记文件地址）
 *** SVM
     + 李云良：
     + 徐叶琛：
     + 勒一凡|
-   | 决策树| 05/20 ~ 05/26|
-   |xgboost| 05~27 ~ 06/02 |
-*   TODO list
+   
+*   TO_DO list
    |数学基础| 6月 待安排 |
    |笔试题|6月 待安排|
-   |python高级编程|待安排|
    |ML比赛|待安排|
+   |python高级编程|待安排|
