--- a/README.org
+++ b/README.org
@@ -26,22 +26,26 @@
 #+DOWNLOADED: file:/var/folders/73/53s3wczx1l32608prn_fdgrm0000gn/T/TemporaryItems/（screencaptureui正在存储文稿，已完成6）/截屏2020-05-14 下午8.50.18.png @ 2020-05-14 20:50:24
 [[file:Screen-Pictures/LeetCode%E5%88%B7%E9%A2%98%E7%AF%87/2020-05-14_20-50-24_%E6%88%AA%E5%B1%8F2020-05-14%20%E4%B8%8B%E5%8D%888.50.18.png]]
 ** 🐈每日题目分配
-   | Date  | Topic  | 李云良       | 徐叶琛                   | 勒一凡         | Check |
-   |-------+--------+--------------+--------------------------+----------------+-------|
-   | 05/14 | DP     | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]     | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]     | ☑️     |
-   | 05/15 | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]] | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]] | ☑️     |
-   | 05/16 | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][最小路径和]]   | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][最长回文子串]]   |       |
-   | 05/17 | DP     | [[https://leetcode-cn.com/problems/coin-change/][零钱兑换]]     | [[https://leetcode-cn.com/problems/word-break/][单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][分割等和子集]]   |       |
-   |-------+--------+--------------+--------------------------+----------------+-------|
-   | 05/18 | 二叉树 | [[https://leetcode-cn.com/problems/merge-two-binary-trees][合并二叉树]]   | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][二叉树的最大深度]]         | [[https://leetcode-cn.com/problems/symmetric-tree][对称二叉树]]     |       |
-   |       |        |              |                          |                |       |
+   | Date  | Topic  | 李云良                 | 徐叶琛                   | 勒一凡                   | Check |
+   |-------+--------+------------------------+--------------------------+--------------------------+-------|
+   | 05/14 | DP     | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]               | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]               | ☑️     |
+   | 05/15 | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]]           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]]           | ☑️     |
+   | 05/16 | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][最小路径和]]             | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][最长回文子串]]             |       |
+   | 05/17 | DP     | [[https://leetcode-cn.com/problems/coin-change/][零钱兑换]]               | [[https://leetcode-cn.com/problems/word-break/][单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][分割等和子集]]             |       |
+   |-------+--------+------------------------+--------------------------+--------------------------+-------|
+   | 05/18 | 二叉树 | [[https://leetcode-cn.com/problems/merge-two-binary-trees][合并二叉树]]             | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][二叉树的最大深度]]         | [[https://leetcode-cn.com/problems/symmetric-tree][对称二叉树]]               |       |
+   | 05/19 | 遍历   | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][从前序和中序构造二叉树]] | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]]           | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][非递归层序遍历]]           |       |
+   | 05/20 | 二叉树 | [[https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree][二叉树的最近公共祖先]]   | [[https://leetcode-cn.com/problems/validate-binary-search-tree][验证二叉搜索树]]           | [[https://leetcode-cn.com/problems/unique-binary-search-trees][不同的二叉搜索树]]         |       |
+   | 05/21 | 二叉树 | [[https://leetcode-cn.com/problems/diameter-of-binary-tree][二叉树的直径]]           | [[https://leetcode-cn.com/problems/convert-bst-to-greater-tree][把二叉树转换为累加树]]     | [[https://leetcode-cn.com/problems/flatten-binary-tree-to-linked-list][二叉树展开为链表]]         |       |
+   | 05/22 | 分治   | [[https://leetcode-cn.com/problems/burst-balloons][戳气球]]                 | [[https://leetcode-cn.com/problems/binary-tree-maximum-path-sum][二叉树中的最大路径和]]     | [[https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree][二叉树的序列化与反序列化]] |       |
+   |       |        |                        |                          |                          |       |
 ** 🧠解题思路
 *** 题目列表
     * [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]🍉推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
     * [[file:./coding/198_打家劫舍.py][198.打家劫舍]]
     * [[/coding/53_最大子序和.py][53.最大子序和]]
     * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
-    * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]r
+    * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
     * [[file:./coding/300_最长上升子序列.py][300.最长上升子序列]]😣
     * 💰[[file:/coding/123_买卖股票的最佳时机III.py][123.买票股票的最佳时机III]]
     * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️
