--- a/README.org
+++ b/README.org
@@ -53,6 +53,7 @@
     * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
     * [[file:./coding/101_对称二叉树.py][101.对称二叉树🐱]]
     * [[file:./coding/104_二叉树的最大深度.py][🌲104.二叉树的最大深度]]
+    * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
