--- a/README.org
+++ b/README.org
@@ -47,6 +47,7 @@
     * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
     * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
     * [[file:./coding/300_最长上升子序列.py][300.最长上升子序列]]😣
+    * [[file:./coding/64_最小路径和.py][64.最小路径和]]😭
     * 💰[[file:/coding/123_买卖股票的最佳时机III.py][123.买票股票的最佳时机III]]
     * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️
     * 🥤[[file:./coding/139_单词拆分.py][139.单词拆分]]
