add_derivation_doc_of_svm

--- a/README.org
+++ b/README.org
@@ -66,7 +66,7 @@
 *** SVM
     + 李云良：
     + 徐叶琛：
-    + 勒一凡:
+    + 勒一凡:[[file:./docs/SVM/机器学习-svm全手写推导.pdf][机器学习-svm全手写推导.pdf]]
    
 *   TO_DO list
    |数学基础| 6月 待安排 |
