--- a/README.org
+++ b/README.org
@@ -56,6 +56,7 @@
     * [[file:./coding/101_对称二叉树.py][101.对称二叉树🐱]]
     * [[file:./coding/104_二叉树的最大深度.py][🌲104.二叉树的最大深度]]
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
+    * [[file:./coding/102_二叉树的层寻遍历.py][102.二叉树的层序遍历🦶]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
