--- a/README.org
+++ b/README.org
@@ -57,6 +57,7 @@
     * [[file:./coding/104_二叉树的最大深度.py][🌲104.二叉树的最大深度]]
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
     * [[file:./coding/102_二叉树的层序遍历.py][102.二叉树的层序遍历]]
+    * [[file:./coding/94_二叉树的中序遍历.python高级编程][94.二叉树的中序遍历]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
@@ -70,7 +71,7 @@
     + Van:[[file:./docs/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]]
    
 *   TO_DO list
-   |数学基础| 6月 待安排 |
-   |笔试题|6月 待安排|
-   |ML比赛|待安排|
-   |python高级编程|待安排|
+   | 数学基础       | 6月 待安排 |
+   | 笔试题         | 6月 待安排 |
+   | ML比赛         | 待安排     |
+   | python高级编程 | 待安排     |
