--- a/README.org
+++ b/README.org
@@ -26,7 +26,7 @@
 #+DOWNLOADED: file:/var/folders/73/53s3wczx1l32608prn_fdgrm0000gn/T/TemporaryItems/（screencaptureui正在存储文稿，已完成6）/截屏2020-05-14 下午8.50.18.png @ 2020-05-14 20:50:24
 [[file:Screen-Pictures/LeetCode%E5%88%B7%E9%A2%98%E7%AF%87/2020-05-14_20-50-24_%E6%88%AA%E5%B1%8F2020-05-14%20%E4%B8%8B%E5%8D%888.50.18.png]]
 ** 🐈每日题目分配
-   | Date  | Topic  | Black_tear    | Giant       | Van             | Check |
+   | Date  | Topic  | Black_tear             | Giant                    | Van                      | Check |
    |-------+--------+------------------------+--------------------------+--------------------------+-------|
    | 05/14 | DP     | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]               | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]               | ☑️     |
    | 05/15 | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]]           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]]           | ☑️     |
@@ -58,6 +58,7 @@
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
     * [[file:./coding/102_二叉树的层序遍历.py][102.二叉树的层序遍历]]
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
+    * [[file:./coding/105_从前序与中序遍历序列构造二叉树.py][105.从前序与中序遍历序列构造二叉树]]🎩
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
