--- a/README.org
+++ b/README.org
@@ -60,7 +60,7 @@
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/105_从前序与中序遍历序列构造二叉树.py][105.从前序与中序遍历序列构造二叉树]]🎩
     * [[file:./coding/98_验证二叉搜索树.py][💪98.验证二叉搜索树]]
-    * [[file:./coding/96_不同的二叉搜索树.python][96.不同的二叉搜索树]]😭
+    * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
