--- a/README.org
+++ b/README.org
@@ -62,6 +62,7 @@
     * [[file:./coding/98_验证二叉搜索树.py][💪98.验证二叉搜索树]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
     * [[file:./coding/236_二叉树的最近公共祖先.py][236.二叉树的最近公共祖先]]😫
+    * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
