--- a/README.org
+++ b/README.org
@@ -63,6 +63,7 @@
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
     * [[file:./coding/236_二叉树的最近公共祖先.py][236.二叉树的最近公共祖先]]😫
     * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
+    * [[file:./coding/114_二叉树展开为链表.py][114.二叉树展开链表]]🐶
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
