--- a/README.org
+++ b/README.org
@@ -64,6 +64,7 @@
     * [[file:./coding/236_二叉树的最近公共祖先.py][236.二叉树的最近公共祖先]]😫
     * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
     * [[file:./coding/114_二叉树展开为链表.py][114.二叉树展开链表]]🐶
+    * [[file:/coding/124_二叉树中的最大路径和.py][124. 二叉树中的最大路径和]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题  | deadline     |
