--- a/README.org
+++ b/README.org
@@ -69,7 +69,7 @@
     * [[file:./coding/236_二叉树的最近公共祖先.py][236.二叉树的最近公共祖先]]😫
     * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
-    * [[file:./coding/297_二叉树的序列化和反序列化.py][297.二叉树序列化和反序列化]]😢
+    * [[file:./coding/297_二叉树的序列化与反序列化.py][297.二叉树序列化和反序列化]]😢
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
 * 📣MachineLearning分享篇
