--- a/README.org
+++ b/README.org
@@ -41,7 +41,7 @@
    | 05/23        | DP       | [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]]               | [[https://leetcode-cn.com/problems/regular-expression-matching/][正则表达式匹配]]           | [[https://leetcode-cn.com/problems/longest-valid-parentheses/][最长有效括号]]                            |       |
    | 05/24        |          |                        |                          |                                         |       |
    |--------------+----------+------------------------+--------------------------+-----------------------------------------+-------|
-   | * 温馨提示：  这周任务比较难 请做好心理预期！！！*
+   | *温馨提示：  这周任务比较难 请做好心理预期！！*                                                                               |
    | 05/25        | DP       | [[https://leetcode-cn.com/problems/counting-bits/][比特位计数]]             | [[https://leetcode-cn.com/problems/perfect-squares/][完全平方数]]               | [[https://leetcode-cn.com/problems/unique-paths/][不同路径]]                                |       |
    | 05/26        | DP       | [[https://leetcode-cn.com/problems/target-sum/][目标和]]                 | [[https://leetcode-cn.com/problems/maximal-square/][最大正方形]]               | [[https://leetcode-cn.com/problems/maximum-product-subarray/][乘积最大子数组]]                          |       |
    | 05/27        | DP       | [[https://leetcode-cn.com/problems/trapping-rain-water/][接雨水]]                 | [[https://leetcode-cn.com/problems/edit-distance/][编辑距离]]                 | [[https://leetcode-cn.com/problems/wildcard-matching][通配符匹配]]                              |       |
