--- a/README.org
+++ b/README.org
@@ -55,6 +55,7 @@
      * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️
      * [[file:/coding/10_正则表达式匹配.py][10. 正则表达式匹配]]😭推荐阅读:[[https://leetcode-cn.com/problems/regular-expression-matching/solution/ji-yu-guan-fang-ti-jie-gen-xiang-xi-de-jiang-jie-b/][正则表达式-详细讲解，由浅入深]]
      * [[/coding/53_最大子序和.py][53.最大子序和]]
+     * [[file:./coding/62_不同路径.py][62.不同路径]]🐶
      * [[file:./coding/64_最小路径和.py][64.最小路径和]]😭
      * [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]🍉推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
      * 💰[[file:/coding/123_买卖股票的最佳时机III.py][123.买票股票的最佳时机III]]
