--- a/README.org
+++ b/README.org
@@ -87,17 +87,17 @@
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
-   | 专题    | deadline      |
-   | SVM     | 05/14 ~ 05/19 |
-   | 决策树  | 05/20 ~ 05/26 |
-   | xgboost | 05~27 ~ 06/02 |
-   |         |               |
+   | 专题     | deadline      |
+   | SVM      | 05/14 ~ 05/19 |
+   | word2vec | 05/25 ~ 05/26 |
+   | 决策树   | -             |
+   | xgboost  | -             |
+   |          |               |
 ** 分享链接（专题笔记文件地址）
-*** SVM
-    + Black_tear：
-    + Giant：
-    + Van:[[file:./docs/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]]
-   
+   | topic    | black_tear | giant | van                        |
+   | SVM      | -          | -     | [[file:./docs/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]] |
+   | Word2Vec |            |       |                            |
+   |          |            |       |                            |
 *   TO_DO list
    | 数学基础       | 6月 待安排 |
    | 笔试题         | 6月 待安排 |
